--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -17,6 +17,16 @@
   margin: -1px 0 0 -1px;
 }
 
+.Timeline-TimeBox:hover {
+  background-color: rgb(250, 250, 250);
+  border-width: 2px;
+}
+
+.Timeline-TimeBox-selected {
+  border-color: rgb(230, 250, 230);
+  background-color: rgb(210, 240, 220);
+}
+
 .TimelineDay {
 
 }
