--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,10 @@ body {
 .Create-container {
   margin-bottom: 30px;
 }
+
+.font-icon {
+  height: 1em;
+  left: .125em;
+  bottom: .125em;
+  position: relative;
+}
