Rename page components to *Page
It was confusing having normal components and page components with the
same naming convention. This commit renames all pages to *Page,
restoring sanity to the world.

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ body {
   border-color: rgb(28,48,92);
 }
 
-.Welcome-content {
+.WelcomePage-content {
   width: 500px;
 }
 
@@ -89,7 +89,7 @@ body {
   cursor: pointer;
 }
 
-.Create-container {
+.CreatePage-container {
   margin-bottom: 30px;
 }
 
