--- a/src/components/PollPage.css
+++ b/src/components/PollPage.css
@@ -1,19 +1,19 @@
-.Poll-container {
+.PollPage-container {
   margin-bottom: 30px;
 }
 
-.Poll-header {
+.PollPage-header {
   text-align: center;
   margin-bottom: 30px;
 }
 
-.Poll-slider {
+.PollPage-slider {
   max-width: 400px;
   margin: 5px auto;
   margin-bottom: 70px;
 }
 
-.Poll-Slider-label {
+.PollPage-Slider-label {
   margin-top: 20px;
   text-align: center;
 }
