--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -1,2 +1,6 @@
+$mdc-theme-primary: #193163;
+$mdc-theme-secondary: #F9BA5C;
+$mdc-theme-surface: #F7F6F4;
+
 @import '@material/react-button/index';
 @import '@material/react-card/index';
