Move ShowAttendees component from Timeline into ShowResults

--- a/src/components/ShowResults.module.scss
+++ b/src/components/ShowResults.module.scss
@@ -12,3 +12,14 @@
 .rc-slider {
   margin-bottom: 45px;
 }
+
+.attendees {
+  top: 1em;
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+.pollTime {
+  margin-bottom: 1em;
+}
+
