--- a/src/App.scss
+++ b/src/App.scss
@@ -64,10 +64,6 @@ body {
   margin-bottom: 30px;
 }
 
-#form-header #header {
-  font-size: 64px;
-}
-
 .link {
   color: #ccc;
   text-decoration: underline;
@@ -88,3 +84,18 @@ body {
 .nav-item {
   outline: none;
 }
+
+
+// CREATE NEW SHOW SCSS
+
+.create-show__form {
+  text-align: center;
+}
+
+.create-show__header {
+
+}
+
+
+
+
