--- a/src/components/CreatePage.module.scss
+++ b/src/components/CreatePage.module.scss
@@ -1,3 +1,9 @@
+// @import '@material/react-text-field/icon/index.scss';
+
 .container {
   margin-bottom: 30px;
+}
+
+.create-show__form {
+  text-align: center;
 }
