Style Create Page

--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -4,3 +4,4 @@ $mdc-theme-surface: #F7F6F4;
 
 @import '@material/react-button/index';
 @import '@material/react-card/index';
+@import '@material/react-text-field/index';
