--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
 @import './mdc';
 
 body {
   color: rgb(28,48,92);
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
 }
 
 .center {
