--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,11 @@ body {
   font-weight: 300;
 }
 
+h1, h2, h3 {
+  font-weight: 300;
+  margin: inherit, 10px;
+}
+
 .center {
   display: block;
   margin-left: auto;
