Basic Style update for ShowPage

--- a/src/components/ShowPage.module.scss
+++ b/src/components/ShowPage.module.scss
@@ -10,3 +10,18 @@
 .contentLogo {
   margin-bottom: 15px !important;
 }
+
+.copyUrlInputContainer {
+  margin-bottom: 5px;
+  display: block;
+}
+
+.copyUrlInput {
+  height: 30px !important;
+  width: 350px;
+}
+
+.tabBar {
+  display: flex;
+  flex-direction: row;
+}
