--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -5,3 +5,5 @@ $mdc-theme-surface: #F7F6F4;
 @import '@material/react-button/index';
 @import '@material/react-card/index';
 @import '@material/react-text-field/index';
+@import '@material/react-tab-bar/index.scss';
+@import '@material/react-tab/index.scss';
