--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,16 @@
 body {
   color: rgb(28,48,92);
   font-family: 'Raleway', sans-serif;
+  // font-family: 'Fira Sans', sans-serif;
+
   font-weight: 300;
+}
+
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
 }
 
 h1 {
