Improve show page layout and make sidebar sticky

--- a/src/components/ShowRespond.module.scss
+++ b/src/components/ShowRespond.module.scss
@@ -1,10 +1,10 @@
-.form_input {
+.formInput {
 }
 
-.form_group {
+.formGroup {
     text-align: center;
 }
 
-.form_helper_text {
+.formHelperText {
     margin-bottom: 20px !important;
 }
