Modify Create page css

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,8 +4,7 @@
 
 body {
   color: rgb(28,48,92);
-  font-family: 'Raleway', sans-serif;
-  // font-family: 'Fira Sans', sans-serif;
+  font-family: "Fira Sans","Trebuchet MS","Helvetica Neue","Arial",sans-serif;
 
   font-weight: 300;
 }
