Beautify date headers

--- a/src/components/Timeline.module.scss
+++ b/src/components/Timeline.module.scss
@@ -44,10 +44,11 @@
   border-color: white white rgb(200, 200, 200) white;
   border-width: 1px;
   margin: -1px 0 0 -1px;
+  text-align: center;
 }
 
 .timelineLabel {
-  background-color: rgb(240, 240, 240);
+  background-color: white;
 }
 
 ol {
