--- a/src/components/WelcomePage.module.scss
+++ b/src/components/WelcomePage.module.scss
@@ -1,46 +1,114 @@
-@import '~@material/theme/variables';
+@import url('https://fonts.googleapis.com/css?family=Caveat+Brush');
 
-.landingPage {
-  min-height: 100vh;
-  background: url(../bg.svg);
-  background-size: 100% 100%;
-  overflow: hidden;
+$mdc-theme-primary: #193163;
+$mdc-theme-secondary: #F9BA5C;
+$mdc-theme-surface: #F7F6F4;
 
-  // Prevent oversized content from allowing background to scroll
-  z-index: 1;
+#halfPage {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: $mdc-theme-primary;
+  color: white;
+  text-align: center;
+  padding: 64px 32px 32px;
 }
 
-.content {
-  max-width: 500px;
-  width: 75%;
-  min-width: 270px;
-  padding: 20px;
+#subText {
+  font-size: 20px;
+  line-height: 1.5;
+  font-weight: normal;
+  font-style: normal;
+  font-family: "Fira Sans","Trebuchet MS","Helvetica Neue","Arial",sans-serif;
+  -webkit-font-smoothing: antialiased;
+  margin-top: 0px;
 }
 
-.logo {
-  width: 80%;
-  margin: 10px auto 20px auto;
+#titleContainer {
+  width: 510px;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
-.createButton {
+#downwardArrow {
+    height: 22px;
+    margin-top: 18px;
+    margin-right: 4px;
+    top: 10px;
+    position: relative;
+}
+
+#pageTitle {
+  font-size: 40px;
+  line-height: 1.2;
+  font-weight: 700;
+  // font-style: italic;
+  font-family: "Fira Sans", "Trebuchet MS", "Helvetica Neue", "Arial", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+#titleNoteContainer {
+  text-align: right;
+}
+
+
+#note {
+  font-weight: normal;
+  font-style: normal;
+  font-family: "Caveat Brush","Comic Sans","Helvetica Neue","Arial",sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 28px;
+  line-height: inherit;
+  white-space: nowrap;
+}
+
+.pollNameField  {
+  background-color: white;
+  width: 400px;
+  border-radius: 100px;
+}
+
+
+#formContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 650px;
+  height: 38px;
+}
+
+#createPollButton {
+  height: 100%;
+  background: $mdc-theme-secondary;
   width: 100%;
 }
 
-.authButtons {
-  display: flex;
-  justify-content: center;
+#buttonContainer {
+  text-decoration: none;
+  margin: 10px;
+  height: 100%;
+  width: 215px;
+}
 
-  a {
-    flex: 1;
+@media screen and (max-width: 600px) {
+  #pageTitle {
+    font-size: 32px;
+  }
 
-    button {
-      width: 100%;
-    }
+  #titleContainer {
+    width: 80vw;
+  }
+
+  #formContainer {
+    width: 80vw;
   }
 }
 
-.divider {
-  border: 0;
-  height: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
-}
