--- a/src/components/Timeline.module.scss
+++ b/src/components/Timeline.module.scss
@@ -17,12 +17,17 @@
 
 .timeBox {
   border-style: solid;
-  border-color: rgb(200, 200, 200);
+  border-color: $mdc-theme-primary;
   border-width: 0px;
   margin: -1px 0 0 -1px;
+  background-color: white;
 
   &:hover {
     border-width: 2px 3px 3px 2px;
+  }
+
+  &.oddCol {
+    background-color: #f5f5f5;
   }
 
   &.selecting {
