--- a/src/components/Timeline.module.scss
+++ b/src/components/Timeline.module.scss
@@ -25,6 +25,7 @@ $empty-cell-color: white;
   margin: 0 1px 0 0;
 
   .tickContent {
+    height: 1rem;
     padding: 0.1rem 0.4rem;
     text-align: right;
     transform: translateY(-50%);
@@ -63,6 +64,7 @@ $empty-cell-color: white;
 
 .timelineLabel {
   background-color: $mdc-theme-surface;
+  font-family: monospace;
 }
 
 ol {
