Add rudimentary touch input support
Performance is great on iPad Pro, but pretty bad on a OnePlus 3T.
Firefox on Android is especially bad, and is almost unusable - the page
still scrolls for some reason.

--- a/src/components/Timeline.module.scss
+++ b/src/components/Timeline.module.scss
@@ -38,6 +38,7 @@ $empty-cell-color: white;
   border-width: 0px;
   margin: -1px 0 0 -1px;
   background-color: $empty-cell-color;
+  touch-action: none;
 
   &:hover {
     border-width: 2px 3px 3px 2px;
