--- a/src/components/Timeline.module.scss
+++ b/src/components/Timeline.module.scss
@@ -38,7 +38,8 @@ $empty-cell-color: white;
   border-width: 0px;
   margin: -1px 0 0 -1px;
   background-color: $empty-cell-color;
-  touch-action: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
 
   &:hover {
     border-width: 2px 3px 3px 2px;
