--- a/src/components/BottomAppBar.module.scss
+++ b/src/components/BottomAppBar.module.scss
@@ -1,6 +1,4 @@
-$mdc-theme-primary: #193163;
-$mdc-theme-secondary: #F9BA5C;
-$mdc-theme-surface: #F7F6F4;
+@import '../mdc-variables';
 
 .appBarBottom {
   left: 0;
