--- a/src/components/WelcomePage.module.scss
+++ b/src/components/WelcomePage.module.scss
@@ -5,8 +5,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
   background-color: $mdc-theme-primary;
   color: white;
   text-align: center;
@@ -21,7 +19,6 @@
 }
 
 #titleContainer {
-  width: 510px;
   text-align: center;
   margin-bottom: 40px;
 }
@@ -46,12 +43,9 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: 650px;
-  height: 38px;
 }
 
 #createPollButton {
-  height: 100%;
   background: $mdc-theme-secondary;
   width: 100%;
 }
@@ -59,8 +53,6 @@
 #buttonContainer {
   text-decoration: none;
   margin: 10px;
-  height: 100%;
-  width: 215px;
 }
 
 @media screen and (max-width: 600px) {
@@ -68,11 +60,7 @@
     font-size: 32px;
   }
 
-  #titleContainer {
-    width: 80vw;
-  }
-
-  #formContainer {
-    width: 80vw;
+  .pollNameField {
+    width: 100%;
   }
 }
