--- a/src/components/ShowRespond.module.scss
+++ b/src/components/ShowRespond.module.scss
@@ -1,10 +1,13 @@
 .formInput {
+    overflow: hidden;
 }
 
 .formGroup {
+    overflow: hidden;
     text-align: center;
 }
 
 .formHelperText {
+    overflow: hidden;
     margin-bottom: 20px !important;
 }
