--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -1,4 +1,9 @@
 .attendees {
+  background-color: #F5F5F5;
+  margin-top: 32px;
+  border-radius: 10px;
+  margin-left: 0px;
+  padding: 4px 8px 16px 16px;
 }
 
 .pollTime {
