--- a/src/components/ShowResultsBottomBar.module.scss
+++ b/src/components/ShowResultsBottomBar.module.scss
@@ -61,7 +61,7 @@
     height: 40px;
   }
   to {
-    height: 100%;
+    height: 100vh;
   }
 }
 
@@ -71,7 +71,7 @@
 
 @keyframes slideBackward {
   from {
-    height: 100%;
+    height: 100vh;
   }
   to {
     height: 40px;
