--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Material+Icons');
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans');
 @import './mdc';
 
