--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -7,6 +7,7 @@
 @import '@material/react-text-field/index';
 @import '@material/react-tab-bar/index.scss';
 @import '@material/react-tab/index.scss';
+@import '@material/react-material-icon/index';
 
 // Override standard MDC classes
-@import './mdc-override.scss'
+@import './mdc-override';
