Fix Material typography

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 
 body {
   color: rgb(28, 48, 92);
-  font-family: 'Fira Sans', 'Trebuchet MS', 'Helvetica Neue', 'Arial', sans-serif;
+  font-family: $mdc-typography-font-family;
 }
 
 body {
