--- a/src/mdc-variables.scss
+++ b/src/mdc-variables.scss
@@ -1,3 +1,4 @@
 $mdc-theme-primary: #193163;
 $mdc-theme-secondary: #F9BA5C;
 $mdc-theme-surface: #F7F6F4;
+$mdc-typography-font-family: 'Fira Sans', 'Trebuchet MS', 'Helvetica Neue', 'Arial', sans-serif;
