--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -2,6 +2,7 @@
 @import './mdc-variables';
 
 // MDC imports for the whole app
+@import "@material/typography/mdc-typography";
 @import '@material/react-button/index';
 @import '@material/react-card/index';
 @import '@material/react-text-field/index';
