--- a/src/components/ShowResults.module.scss
+++ b/src/components/ShowResults.module.scss
@@ -11,6 +11,15 @@
   .sidebar {
     display: none;
   }
+  .bottomBar {
+    background-color: white;
+    position: fixed;
+    bottom: 0px;
+    left: 5%;
+    right: 5%;
+    height: 53px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.16), 0 5px 10px rgba(0,0,0,0.23);
+  }
 }
 
 @media all and (min-width: 900px) {
