Beautify ShowPage tabs slightly

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,8 +45,8 @@ h3 {
 }
 
 #form-header {
-  padding-top: 50px;
-  padding-bottom: 20px;
+  padding-top: 3em;
+  padding-bottom: 3em;
 }
 
 .content-logo {
