Upgrade @material packages to v0.6.1

--- a/src/components/ShowPage.module.scss
+++ b/src/components/ShowPage.module.scss
@@ -34,7 +34,7 @@
   text-decoration: none;
 
   .linkTabButton {
-    @include mdc-button-corner-radius($mdc-button-height / 2);
+    @include mdc-button-shape-radius($mdc-button-height / 2);
     @include mdc-button-horizontal-padding(1.5em);
     @include mdc-button-outline-color($mdc-theme-primary);
   }
